<resources>
    <string name="app_name">MaternalHealth</string>
    <string name="maternal_health_care">MATERNAL HEALTH CARE</string>
    <string name="enter_username_and_password">Enter username and password</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">forgot password?</string>
    <string name="or">OR</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="second_name">Second Name</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account_login">Dont have an Account? Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">logo</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="john">John</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="welcome">Welcome Back</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="booking">Booking</string>
    <string name="progress">Progress</string>
    <string name="hospital_info">Hospital Info</string>
    <string name="emergency">Emergency</string>
    <string name="upcoming">UPCOMING</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="dr_zary_appointment">DR Zary Appointment</string>
    <string name="_10_days">10 Days</string>
    <string name="weeks">Weeks</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="info">Info</string>
    <string name="for_emergency">FOR EMERGENCY</string>
    <string name="tap_to_call">TAP TO CALL</string>
    <string name="emergency_number">0710100100</string>
</resources>